<?xml version="1.0"?>
<package>
  <name>status_lights_ben</name>
  <version>0.1.0</version>
  <description>This is a package to monitor the state of ROS and interface with the vehichles status lights</description>

  <maintainer email="amunoz@ccom.unh.edu">Avery Munoz</maintainer>
  <author email="amunoz@ccom.unh.edu">Avery Munoz</author>
  <license>BSD license</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>std_msgs</build_depend>

  <run_depend>message_runtime</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>roslaunch</run_depend>
  <run_depend>std_msgs</run_depend>
  
</package>
